--- a/templates/clients/clients.html
+++ b/templates/clients/clients.html
@@ -5,10 +5,10 @@
 
 {% block content %}
 <div class="pagetitle">
-    <h1>Client Management</h1>
+    <h1><i class="bi bi-person-check"></i> Client Management</h1>
     <nav>
         <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="{% url 'admin_dashboard' %}">Home</a></li>
+            <li class="breadcrumb-item"><a href="{% url 'admin_dashboard' %}"><i class="bi bi-house-door"></i> Home</a></li>
             <li class="breadcrumb-item active">Clients</li>
         </ol>
     </nav>
