--- a/templates/owners/aircraftowners.html
+++ b/templates/owners/aircraftowners.html
@@ -5,10 +5,10 @@
 
 {% block content %}
 <div class="pagetitle">
-    <h1>Aircraft Owners</h1>
+    <h1><i class="bi bi-person-circle"></i>  Aircraft Owners</h1>
     <nav>
         <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="{% url 'admin_dashboard' %}">Home</a></li>
+            <li class="breadcrumb-item"><a href="{% url 'admin_dashboard' %}"><i class="bi bi-house-door"></i> Home</a></li>
             <li class="breadcrumb-item active">Aircraft Owners</li>
         </ol>
     </nav>
